fixing bugs in collapsing And divs when there is only one element in there.  initial hook up of popups

--- a/app/assets/stylesheets/builder.css
+++ b/app/assets/stylesheets/builder.css
@@ -265,3 +265,23 @@ list-style: none;
   background-image:url('/assets/icon_demo.png');
   background-repeat: no-repeat;
 }
+
+.popup-frame {
+     background-color:#EDEDED;
+    border:2px solid #666666;
+    font-size:35px;
+    line-height:1.3em;
+    margin:10px auto;
+    padding:10px;
+    position:relative;
+    text-align:center;
+    -moz-border-radius:10px;
+    -webkit-border-radius:10px;
+    -moz-box-shadow:0 0 5px #888888;
+    -webkit-box-shadow:0 0 5px #888888;
+}
+
+.popup-content {
+  
+}
+
